main menu UI fix

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/MuzTus.AppTheme">
 
         <activity android:name="com.artline.muztus.old.Level" />
         <activity android:name="com.artline.muztus.old.Premia" />
@@ -24,10 +24,25 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name="com.artline.muztus.old.OldMainActivity"
+            android:exported="true"
+            android:icon="@drawable/artist_1_1_pugacheva"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+
+            </intent-filter>
+
+        </activity> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
+
+
+        <activity
             android:name="com.artline.muztus.ui.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-
             android:windowSoftInputMode="adjustResize">
 
             <intent-filter>
